--- a/src/main/resources/templates/MyTodolist.html
+++ b/src/main/resources/templates/MyTodolist.html
@@ -7,6 +7,14 @@
     <title>Bootstrap Layout</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/style.css}">
+    <style>
+        .error{
+            font-style: italic;
+            color: red;
+            font-weight: bold;
+        }
+
+    </style>
 </head>
 
 <body>
@@ -57,12 +65,14 @@
                 <div class="form-group">
                     <label for="head" class="form-label">Title:</label>
                     <input type="text" class="form-control" th:field="*{head}" id="head" placeholder="Enter title">
+                    <span th:if="${#fields.hasErrors('head')}" th:errors="*{head}" class="error"></span>
                 </div>
 
                 <div class="form-group">
                     <label for="body" class="form-label">Description:</label>
                     <textarea class="form-control-textarea" th:field="*{body}" id="body"
                               placeholder="Enter description"></textarea>
+                    <span th:if="${#fields.hasErrors('body')}" th:errors="*{body}" class="error"></span>
                 </div>
 
                 <button type="submit" class="btn btn-primary w-100">Save</button>
